--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
 
-import Link from "../ui/link.astro";
-import Container from "../ui/container.astro";
-import Section from "../ui/section.astro";
-import Price from "../ui/price.astro";
-import Select from "../ui/select.astro";
+import Link from "@/components/ui/link.astro";
+import Container from "@/components/ui/container.astro";
+import Section from "@/components/ui/section.astro";
+import Price from "@/components/ui/price.astro";
+import Select from "@/components/ui/select.astro";
 import type { Product } from "@/schemas/contentful-transformed.types";
 
 type Props = {
