--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -125,7 +125,7 @@ const mainPhotoSrc = mainPhoto.url;
     margin-bottom: var(--default-spacing);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto 1fr 1fr auto;
+    grid-template-rows: auto auto auto 1fr auto;
     align-items: start;
     grid-gap: 5rem;
     grid-template-areas:
