--- a/src/components/product/product-list.astro
+++ b/src/components/product/product-list.astro
@@ -7,7 +7,7 @@ import Section from "../ui/section.astro";
 const products = await getCollection("products");
 ---
 
-<Section mode="light" sectionId="products" title="Produktai">
+<Section appearanceMode="light" sectionId="products" title="Mūsų produktai">
   {
     products.map(({ data }) => {
       return <ProductItem product={data} />;
