--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,49 +4,53 @@ import Container from "./ui/container.astro";
 const currentYear = new Date().getFullYear();
 ---
 
-<footer>
-  <Container>
-    <div class="container">
-      <p>
-        {currentYear} &copy; UAB „Brameda“ visos teisės saugomos
-      </p>
-      <p>
-        Sprendimas
-        <a
-          href="http://www.ricardas.io"
-          rel="noopener noreferrer"
-          target="_blank">ricardas.io</a
-        >
-      </p>
-    </div>
+<footer class="footer">
+  <Container innerContentClassList="footerContainer">
+    <p>
+      {currentYear} &copy; UAB „Brameda“ visos teisės saugomos
+    </p>
+    <p>
+      Sprendimas
+      <a href="http://www.ricardas.io" rel="noopener noreferrer" target="_blank"
+        >ricardas.io</a
+      >
+    </p>
   </Container>
 </footer>
 
 <style>
-  footer {
+  .footer {
     background-color: var(--color-grey-dark2);
+    padding-block-start: var(--default-spacing);
   }
 
-  footer .container {
+  :global(.footerContainer) {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: var(--default-spacing);
   }
 
-  footer p {
+  .footer p {
     color: var(--color-white);
     font-size: 1.5rem;
     text-align: center;
-    padding: var(--default-spacing) 0 1rem 0;
   }
 
-  footer a:link,
-  footer a:visited {
+  .footer a:link,
+  .footer a:visited {
     color: var(--color-grey-light);
     text-decoration: none;
   }
 
-  footer a:hover,
-  footer a:active {
+  .footer a:hover,
+  .footer a:active {
     text-decoration: underline;
+  }
+
+  @media only screen and (max-width: 50em) {
+    :global(.footerContainer) {
+      flex-direction: column;
+      gap: 0;
+    }
   }
 </style>
