--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -26,7 +26,7 @@ const currentYear = new Date().getFullYear();
 
   :global(.footerContainer) {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: var(--default-spacing);
   }
 
